Parser/parser.output
Terminals unused in grammar

    TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: program TOKEN_EOF
    2        | program global_statement
    3        | global_statement

    4 global_statement: type_declaration
    5                 | var_declaration
    6                 | function_prototype
    7                 | function_definition
    8                 | def_undef_definition
    9                 | TOKEN_SEMI

   10 local_statement_list: ε
   11                     | local_statement_list local_statement

   12 local_statement: selection_statement
   13                | iteration_statement
   14                | jump_statement
   15                | compound_statement
   16                | var_declaration
   17                | var_assignment
   18                | function_definition
   19                | exp TOKEN_SEMI

   20 def_undef_definition: define
   21                     | undef

   22 define: TOKEN_PP_DEFINE

   23 undef: TOKEN_PP_UNDEF

   24 selection_statement: if_statement
   25                    | switch_statement

   26 jump_statement: break_statement
   27               | return_statement
   28               | continue_statement

   29 iteration_statement: do_while_loop
   30                    | while_loop
   31                    | for_loop

   32 type_declaration: enum_declaration
   33                 | struct_declaration
   34                 | union_declaration

   35 compound_statement: TOKEN_LEFT_BRACE local_statement_list TOKEN_RIGHT_BRACE

   36 enum_declaration: TOKEN_ENUM TOKEN_ID TOKEN_LEFT_BRACE enum_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI

   37 enum_member_list: enum_member
   38                 | enum_member_list TOKEN_COMMA enum_member
   39                 | enum_member_list TOKEN_COMMA

   40 enum_member: TOKEN_ID
   41            | TOKEN_ID TOKEN_ASSIGN TOKEN_NUM
   42            | TOKEN_ID TOKEN_ASSIGN TOKEN_MINUS TOKEN_NUM

   43 struct_declaration: TOKEN_STRUCT TOKEN_ID TOKEN_LEFT_BRACE struct_union_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI

   44 union_declaration: TOKEN_UNION TOKEN_ID TOKEN_LEFT_BRACE struct_union_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI

   45 struct_union_member_list: struct_member
   46                         | struct_union_member_list struct_member

   47 struct_member: var_preamble TOKEN_ID TOKEN_SEMI
   48              | var_preamble TOKEN_ID arr_size TOKEN_SEMI

   49 if_statement: TOKEN_IF TOKEN_LEFT_PARENTHESES exp TOKEN_RIGHT_PARENTHESES local_statement
   50             | TOKEN_IF TOKEN_LEFT_PARENTHESES exp TOKEN_RIGHT_PARENTHESES local_statement TOKEN_ELSE local_statement

   51 switch_statement: TOKEN_SWITCH TOKEN_LEFT_PARENTHESES exp TOKEN_RIGHT_PARENTHESES TOKEN_LEFT_BRACE switch_body TOKEN_RIGHT_BRACE

   52 switch_body: case_list default_clause
   53            | case_list
   54            | default_clause

   55 case_list: case_clause
   56          | case_list case_clause

   57 case_clause: TOKEN_CASE TOKEN_NUM TOKEN_COLON local_statement_list
   58            | TOKEN_CASE TOKEN_CNUM TOKEN_COLON local_statement_list
   59            | TOKEN_CASE TOKEN_ID TOKEN_COLON local_statement_list

   60 default_clause: TOKEN_DEFAULT TOKEN_COLON local_statement_list

   61 continue_statement: TOKEN_CONTINUE TOKEN_SEMI

   62 break_statement: TOKEN_BREAK TOKEN_SEMI

   63 return_statement: TOKEN_RETURN TOKEN_SEMI
   64                 | TOKEN_RETURN exp TOKEN_SEMI

   65 while_loop: TOKEN_WHILE TOKEN_LEFT_PARENTHESES exp TOKEN_RIGHT_PARENTHESES local_statement

   66 do_while_loop: TOKEN_DO local_statement TOKEN_WHILE TOKEN_LEFT_PARENTHESES exp TOKEN_RIGHT_PARENTHESES TOKEN_SEMI

   67 for_loop: TOKEN_FOR TOKEN_LEFT_PARENTHESES for_init_field TOKEN_SEMI for_condition TOKEN_SEMI for_assignment_field TOKEN_RIGHT_PARENTHESES local_statement

   68 for_init_field: ε
   69               | TOKEN_ID TOKEN_ASSIGN exp
   70               | var_preamble TOKEN_ID TOKEN_ASSIGN exp
   71               | var_preamble TOKEN_ID

   72 for_condition: ε
   73              | exp

   74 for_assignment_field: ε
   75                     | simple_var_assign
   76                     | compound_var_assign
   77                     | exp

   78 simple_var_assign: TOKEN_ID TOKEN_ASSIGN exp

   79 compound_var_assign: TOKEN_ID compound_assign_operator exp

   80 function_prototype: function_signature TOKEN_SEMI

   81 function_definition: function_signature compound_statement

   82 function_signature: var_preamble TOKEN_ID TOKEN_LEFT_PARENTHESES arg_list TOKEN_RIGHT_PARENTHESES

   83 arg_list: ε
   84         | arg_list TOKEN_COMMA TOKEN_ELLIPSIS
   85         | arg_list TOKEN_COMMA param_declaration
   86         | param_declaration

   87 param_declaration: var_preamble TOKEN_ID
   88                  | var_preamble TOKEN_ID arr_size
   89                  | var_preamble

   90 func_call: TOKEN_ID TOKEN_LEFT_PARENTHESES exp_list TOKEN_RIGHT_PARENTHESES

   91 exp_list: ε
   92         | exp_list TOKEN_COMMA exp
   93         | exp

   94 type_cast_specifier: TOKEN_LEFT_PARENTHESES all_type_specifiers TOKEN_RIGHT_PARENTHESES

   95 all_type_specifiers: data_type_specifier
   96                    | type_pointer

   97 type_pointer: data_type_specifier TOKEN_ASTERISK
   98             | type_pointer TOKEN_ASTERISK

   99 data_type_specifier: TOKEN_CHAR
  100                    | TOKEN_SHORT
  101                    | TOKEN_INT
  102                    | TOKEN_LONG
  103                    | TOKEN_LONG TOKEN_INT
  104                    | TOKEN_SHORT TOKEN_INT
  105                    | TOKEN_FLOAT
  106                    | TOKEN_DOUBLE
  107                    | TOKEN_LONG TOKEN_DOUBLE
  108                    | TOKEN_VOID
  109                    | TOKEN_STRUCT TOKEN_ID
  110                    | TOKEN_UNION TOKEN_ID
  111                    | TOKEN_ENUM TOKEN_ID

  112 visibility_qualifier: TOKEN_STATIC
  113                     | TOKEN_EXTERN
  114                     | TOKEN_INLINE

  115 mod_qualifier: TOKEN_CONST
  116              | TOKEN_VOLATILE

  117 sign_qualifier: TOKEN_SIGNED
  118               | TOKEN_UNSIGNED

  119 var_declaration: var_preamble id_list TOKEN_SEMI

  120 arr_size: TOKEN_LEFT_BRACKET exp TOKEN_RIGHT_BRACKET
  121         | TOKEN_LEFT_BRACKET TOKEN_RIGHT_BRACKET
  122         | arr_size TOKEN_LEFT_BRACKET exp TOKEN_RIGHT_BRACKET

  123 id_list: TOKEN_ID
  124        | TOKEN_ID TOKEN_ASSIGN exp
  125        | TOKEN_ID arr_size
  126        | id_list TOKEN_COMMA TOKEN_ID
  127        | id_list TOKEN_COMMA TOKEN_ID arr_size
  128        | id_list TOKEN_COMMA simple_var_assign

  129 var_preamble: all_type_specifiers
  130             | visibility_qualifier all_type_specifiers
  131             | mod_qualifier all_type_specifiers
  132             | sign_qualifier all_type_specifiers
  133             | visibility_qualifier mod_qualifier all_type_specifiers
  134             | visibility_qualifier sign_qualifier all_type_specifiers
  135             | mod_qualifier sign_qualifier all_type_specifiers
  136             | visibility_qualifier mod_qualifier sign_qualifier all_type_specifiers

  137 var_assignment: simple_var_assign TOKEN_SEMI
  138               | compound_var_assign TOKEN_SEMI
  139               | array_access TOKEN_ASSIGN exp TOKEN_SEMI
  140               | pointer_content TOKEN_ASSIGN exp TOKEN_SEMI
  141               | array_access compound_assign_operator exp TOKEN_SEMI
  142               | factor TOKEN_DOT TOKEN_ID TOKEN_ASSIGN exp TOKEN_SEMI
  143               | factor TOKEN_ARROW TOKEN_ID TOKEN_ASSIGN exp TOKEN_SEMI
  144               | pointer_content compound_assign_operator exp TOKEN_SEMI
  145               | factor TOKEN_DOT TOKEN_ID compound_assign_operator exp TOKEN_SEMI
  146               | factor TOKEN_ARROW TOKEN_ID compound_assign_operator exp TOKEN_SEMI

  147 exp: exp arithmetic_operator term
  148    | exp comparison_operator term
  149    | exp bitwise_operator term
  150    | exp logic_operator term
  151    | exp TOKEN_TERNARY exp TOKEN_COLON exp
  152    | term

  153 term: term priority_operator operand
  154     | operand

  155 operand: TOKEN_MINUS operand
  156        | TOKEN_INCREMENT operand
  157        | TOKEN_DECREMENT operand
  158        | TOKEN_LOGICAL_NOT factor
  159        | TOKEN_BITWISE_NOT term
  160        | type_cast_specifier factor
  161        | factor

  162 factor: TOKEN_LEFT_PARENTHESES exp TOKEN_RIGHT_PARENTHESES
  163       | array_access
  164       | TOKEN_NUM
  165       | TOKEN_ID
  166       | pointer_content
  167       | TOKEN_FNUM
  168       | TOKEN_CNUM
  169       | TOKEN_STR
  170       | TOKEN_BITWISE_AND array_access
  171       | TOKEN_BITWISE_AND TOKEN_ID
  172       | TOKEN_SIZEOF TOKEN_LEFT_PARENTHESES sizeof_operand TOKEN_RIGHT_PARENTHESES
  173       | func_call
  174       | factor TOKEN_INCREMENT
  175       | factor TOKEN_DECREMENT
  176       | factor TOKEN_DOT TOKEN_ID
  177       | factor TOKEN_ARROW TOKEN_ID

  178 sizeof_operand: all_type_specifiers
  179               | exp

  180 array_access: TOKEN_ID TOKEN_LEFT_BRACKET exp TOKEN_RIGHT_BRACKET
  181             | array_access TOKEN_LEFT_BRACKET exp TOKEN_RIGHT_BRACKET

  182 pointer_content: TOKEN_ASTERISK pointer_content
  183                | TOKEN_ASTERISK TOKEN_ID
  184                | TOKEN_ASTERISK array_access
  185                | TOKEN_ASTERISK TOKEN_LEFT_PARENTHESES exp TOKEN_RIGHT_PARENTHESES

  186 priority_operator: TOKEN_ASTERISK
  187                  | TOKEN_DIVIDE
  188                  | TOKEN_MOD

  189 arithmetic_operator: TOKEN_PLUS
  190                    | TOKEN_MINUS
  191                    | TOKEN_RIGHT_SHIFT
  192                    | TOKEN_LEFT_SHIFT

  193 comparison_operator: TOKEN_EQUAL
  194                    | TOKEN_NOT_EQUAL
  195                    | TOKEN_GREATER_THAN
  196                    | TOKEN_LESS_THAN_OR_EQUAL
  197                    | TOKEN_GREATER_THAN_OR_EQUAL
  198                    | TOKEN_LESS_THAN

  199 bitwise_operator: TOKEN_BITWISE_AND
  200                 | TOKEN_BITWISE_OR
  201                 | TOKEN_BITWISE_XOR

  202 logic_operator: TOKEN_LOGICAL_AND
  203               | TOKEN_LOGICAL_OR

  204 compound_assign_operator: TOKEN_PLUS_ASSIGN
  205                         | TOKEN_MINUS_ASSIGN
  206                         | TOKEN_MODULUS_ASSIGN
  207                         | TOKEN_LEFT_SHIFT_ASSIGN
  208                         | TOKEN_RIGHT_SHIFT_ASSIGN
  209                         | TOKEN_AND_ASSIGN
  210                         | TOKEN_OR_ASSIGN
  211                         | TOKEN_XOR_ASSIGN
  212                         | TOKEN_MULTIPLY_ASSIGN
  213                         | TOKEN_DIVIDE_ASSIGN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_NUM (258) 41 42 57 164
    TOKEN_FNUM (259) 167
    TOKEN_CNUM (260) 58 168
    TOKEN_STR (261) 169
    TOKEN_ID (262) 36 40 41 42 43 44 47 48 59 69 70 71 78 79 82 87 88 90 109 110 111 123 124 125 126 127 142 143 145 146 165 171 176 177 180 183
    TOKEN_INT (263) 101 103 104
    TOKEN_CHAR (264) 99
    TOKEN_FLOAT (265) 105
    TOKEN_DOUBLE (266) 106 107
    TOKEN_VOID (267) 108
    TOKEN_INLINE (268) 114
    TOKEN_SIGNED (269) 117
    TOKEN_UNSIGNED (270) 118
    TOKEN_LONG (271) 102 103 107
    TOKEN_SHORT (272) 100 104
    TOKEN_STATIC (273) 112
    TOKEN_EXTERN (274) 113
    TOKEN_CONST (275) 115
    TOKEN_VOLATILE (276) 116
    TOKEN_STRUCT (277) 43 109
    TOKEN_UNION (278) 44 110
    TOKEN_ENUM (279) 36 111
    TOKEN_SIZEOF (280) 172
    TOKEN_IF (281) 49 50
    TOKEN_ELSE (282) 50
    TOKEN_SWITCH (283) 51
    TOKEN_CASE (284) 57 58 59
    TOKEN_DEFAULT (285) 60
    TOKEN_FOR (286) 67
    TOKEN_WHILE (287) 65 66
    TOKEN_DO (288) 66
    TOKEN_BREAK (289) 62
    TOKEN_CONTINUE (290) 61
    TOKEN_RETURN (291) 63 64
    TOKEN_PP_DEFINE (292) 22
    TOKEN_PP_UNDEF (293) 23
    TOKEN_PLUS (294) 189
    TOKEN_MINUS (295) 42 155 190
    TOKEN_ASTERISK (296) 97 98 182 183 184 185 186
    TOKEN_DIVIDE (297) 187
    TOKEN_MOD (298) 188
    TOKEN_INCREMENT (299) 156 174
    TOKEN_DECREMENT (300) 157 175
    TOKEN_ASSIGN (301) 41 42 69 70 78 124 139 140 142 143
    TOKEN_PLUS_ASSIGN (302) 204
    TOKEN_MINUS_ASSIGN (303) 205
    TOKEN_MULTIPLY_ASSIGN (304) 212
    TOKEN_DIVIDE_ASSIGN (305) 213
    TOKEN_MODULUS_ASSIGN (306) 206
    TOKEN_AND_ASSIGN (307) 209
    TOKEN_OR_ASSIGN (308) 210
    TOKEN_XOR_ASSIGN (309) 211
    TOKEN_LEFT_SHIFT_ASSIGN (310) 207
    TOKEN_RIGHT_SHIFT_ASSIGN (311) 208
    TOKEN_EQUAL (312) 193
    TOKEN_NOT_EQUAL (313) 194
    TOKEN_LESS_THAN (314) 198
    TOKEN_GREATER_THAN (315) 195
    TOKEN_LESS_THAN_OR_EQUAL (316) 196
    TOKEN_GREATER_THAN_OR_EQUAL (317) 197
    TOKEN_LOGICAL_AND (318) 202
    TOKEN_LOGICAL_OR (319) 203
    TOKEN_LOGICAL_NOT (320) 158
    TOKEN_BITWISE_AND (321) 170 171 199
    TOKEN_BITWISE_OR (322) 200
    TOKEN_BITWISE_XOR (323) 201
    TOKEN_BITWISE_NOT (324) 159
    TOKEN_LEFT_SHIFT (325) 192
    TOKEN_RIGHT_SHIFT (326) 191
    TOKEN_ARROW (327) 143 146 177
    TOKEN_ELLIPSIS (328) 84
    TOKEN_DOT (329) 142 145 176
    TOKEN_SEMI (330) 9 19 36 43 44 47 48 61 62 63 64 66 67 80 119 137 138 139 140 141 142 143 144 145 146
    TOKEN_COMMA (331) 38 39 84 85 92 126 127 128
    TOKEN_COLON (332) 57 58 59 60 151
    TOKEN_TERNARY (333) 151
    TOKEN_LEFT_PARENTHESES (334) 49 50 51 65 66 67 82 90 94 162 172 185
    TOKEN_RIGHT_PARENTHESES (335) 49 50 51 65 66 67 82 90 94 162 172 185
    TOKEN_LEFT_BRACE (336) 35 36 43 44 51
    TOKEN_RIGHT_BRACE (337) 35 36 43 44 51
    TOKEN_LEFT_BRACKET (338) 120 121 122 180 181
    TOKEN_RIGHT_BRACKET (339) 120 121 122 180 181
    TOKEN_EOF (340) 1
    TOKEN_ERROR (341)
    LOWER_THAN_ELSE (342)
    UNARY (343)


Nonterminals, with rules where they appear

    $accept (89)
        on left: 0
    program (90)
        on left: 1 2 3
        on right: 0 1 2
    global_statement (91)
        on left: 4 5 6 7 8 9
        on right: 2 3
    local_statement_list (92)
        on left: 10 11
        on right: 11 35 57 58 59 60
    local_statement (93)
        on left: 12 13 14 15 16 17 18 19
        on right: 11 49 50 65 66 67
    def_undef_definition (94)
        on left: 20 21
        on right: 8
    define (95)
        on left: 22
        on right: 20
    undef (96)
        on left: 23
        on right: 21
    selection_statement (97)
        on left: 24 25
        on right: 12
    jump_statement (98)
        on left: 26 27 28
        on right: 14
    iteration_statement (99)
        on left: 29 30 31
        on right: 13
    type_declaration (100)
        on left: 32 33 34
        on right: 4
    compound_statement (101)
        on left: 35
        on right: 15 81
    enum_declaration (102)
        on left: 36
        on right: 32
    enum_member_list (103)
        on left: 37 38 39
        on right: 36 38 39
    enum_member (104)
        on left: 40 41 42
        on right: 37 38
    struct_declaration (105)
        on left: 43
        on right: 33
    union_declaration (106)
        on left: 44
        on right: 34
    struct_union_member_list (107)
        on left: 45 46
        on right: 43 44 46
    struct_member (108)
        on left: 47 48
        on right: 45 46
    if_statement (109)
        on left: 49 50
        on right: 24
    switch_statement (110)
        on left: 51
        on right: 25
    switch_body (111)
        on left: 52 53 54
        on right: 51
    case_list (112)
        on left: 55 56
        on right: 52 53 56
    case_clause (113)
        on left: 57 58 59
        on right: 55 56
    default_clause (114)
        on left: 60
        on right: 52 54
    continue_statement (115)
        on left: 61
        on right: 28
    break_statement (116)
        on left: 62
        on right: 26
    return_statement (117)
        on left: 63 64
        on right: 27
    while_loop (118)
        on left: 65
        on right: 30
    do_while_loop (119)
        on left: 66
        on right: 29
    for_loop (120)
        on left: 67
        on right: 31
    for_init_field (121)
        on left: 68 69 70 71
        on right: 67
    for_condition (122)
        on left: 72 73
        on right: 67
    for_assignment_field (123)
        on left: 74 75 76 77
        on right: 67
    simple_var_assign (124)
        on left: 78
        on right: 75 128 137
    compound_var_assign (125)
        on left: 79
        on right: 76 138
    function_prototype (126)
        on left: 80
        on right: 6
    function_definition (127)
        on left: 81
        on right: 7 18
    function_signature (128)
        on left: 82
        on right: 80 81
    arg_list (129)
        on left: 83 84 85 86
        on right: 82 84 85
    param_declaration (130)
        on left: 87 88 89
        on right: 85 86
    func_call (131)
        on left: 90
        on right: 173
    exp_list (132)
        on left: 91 92 93
        on right: 90 92
    type_cast_specifier (133)
        on left: 94
        on right: 160
    all_type_specifiers (134)
        on left: 95 96
        on right: 94 129 130 131 132 133 134 135 136 178
    type_pointer (135)
        on left: 97 98
        on right: 96 98
    data_type_specifier (136)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 95 97
    visibility_qualifier (137)
        on left: 112 113 114
        on right: 130 133 134 136
    mod_qualifier (138)
        on left: 115 116
        on right: 131 133 135 136
    sign_qualifier (139)
        on left: 117 118
        on right: 132 134 135 136
    var_declaration (140)
        on left: 119
        on right: 5 16
    arr_size (141)
        on left: 120 121 122
        on right: 48 88 122 125 127
    id_list (142)
        on left: 123 124 125 126 127 128
        on right: 119 126 127 128
    var_preamble (143)
        on left: 129 130 131 132 133 134 135 136
        on right: 47 48 70 71 82 87 88 89 119
    var_assignment (144)
        on left: 137 138 139 140 141 142 143 144 145 146
        on right: 17
    exp (145)
        on left: 147 148 149 150 151 152
        on right: 19 49 50 51 64 65 66 69 70 73 77 78 79 92 93 120 122 124 139 140 141 142 143 144 145 146 147 148 149 150 151 162 179 180 181 185
    term (146)
        on left: 153 154
        on right: 147 148 149 150 152 153 159
    operand (147)
        on left: 155 156 157 158 159 160 161
        on right: 153 154 155 156 157
    factor (148)
        on left: 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177
        on right: 142 143 145 146 158 160 161 174 175 176 177
    sizeof_operand (149)
        on left: 178 179
        on right: 172
    array_access (150)
        on left: 180 181
        on right: 139 141 163 170 181 184
    pointer_content (151)
        on left: 182 183 184 185
        on right: 140 144 166 182
    priority_operator (152)
        on left: 186 187 188
        on right: 153
    arithmetic_operator (153)
        on left: 189 190 191 192
        on right: 147
    comparison_operator (154)
        on left: 193 194 195 196 197 198
        on right: 148
    bitwise_operator (155)
        on left: 199 200 201
        on right: 149
    logic_operator (156)
        on left: 202 203
        on right: 150
    compound_assign_operator (157)
        on left: 204 205 206 207 208 209 210 211 212 213
        on right: 79 141 144 145 146


State 0

    0 $accept: • program $end

    TOKEN_INT        shift, and go to state 1
    TOKEN_CHAR       shift, and go to state 2
    TOKEN_FLOAT      shift, and go to state 3
    TOKEN_DOUBLE     shift, and go to state 4
    TOKEN_VOID       shift, and go to state 5
    TOKEN_INLINE     shift, and go to state 6
    TOKEN_SIGNED     shift, and go to state 7
    TOKEN_UNSIGNED   shift, and go to state 8
    TOKEN_LONG       shift, and go to state 9
    TOKEN_SHORT      shift, and go to state 10
    TOKEN_STATIC     shift, and go to state 11
    TOKEN_EXTERN     shift, and go to state 12
    TOKEN_CONST      shift, and go to state 13
    TOKEN_VOLATILE   shift, and go to state 14
    TOKEN_STRUCT     shift, and go to state 15
    TOKEN_UNION      shift, and go to state 16
    TOKEN_ENUM       shift, and go to state 17
    TOKEN_PP_DEFINE  shift, and go to state 18
    TOKEN_PP_UNDEF   shift, and go to state 19
    TOKEN_SEMI       shift, and go to state 20

    program               go to state 21
    global_statement      go to state 22
    def_undef_definition  go to state 23
    define                go to state 24
    undef                 go to state 25
    type_declaration      go to state 26
    enum_declaration      go to state 27
    struct_declaration    go to state 28
    union_declaration     go to state 29
    function_prototype    go to state 30
    function_definition   go to state 31
    function_signature    go to state 32
    all_type_specifiers   go to state 33
    type_pointer          go to state 34
    data_type_specifier   go to state 35
    visibility_qualifier  go to state 36
    mod_qualifier         go to state 37
    sign_qualifier        go to state 38
    var_declaration       go to state 39
    var_preamble          go to state 40


State 1

  101 data_type_specifier: TOKEN_INT •

    $default  reduce using rule 101 (data_type_specifier)


State 2

   99 data_type_specifier: TOKEN_CHAR •

    $default  reduce using rule 99 (data_type_specifier)


State 3

  105 data_type_specifier: TOKEN_FLOAT •

    $default  reduce using rule 105 (data_type_specifier)


State 4

  106 data_type_specifier: TOKEN_DOUBLE •

    $default  reduce using rule 106 (data_type_specifier)


State 5

  108 data_type_specifier: TOKEN_VOID •

    $default  reduce using rule 108 (data_type_specifier)


State 6

  114 visibility_qualifier: TOKEN_INLINE •

    $default  reduce using rule 114 (visibility_qualifier)


State 7

  117 sign_qualifier: TOKEN_SIGNED •

    $default  reduce using rule 117 (sign_qualifier)


State 8

  118 sign_qualifier: TOKEN_UNSIGNED •

    $default  reduce using rule 118 (sign_qualifier)


State 9

  102 data_type_specifier: TOKEN_LONG •
  103                    | TOKEN_LONG • TOKEN_INT
  107                    | TOKEN_LONG • TOKEN_DOUBLE

    TOKEN_INT     shift, and go to state 41
    TOKEN_DOUBLE  shift, and go to state 42

    $default  reduce using rule 102 (data_type_specifier)


State 10

  100 data_type_specifier: TOKEN_SHORT •
  104                    | TOKEN_SHORT • TOKEN_INT

    TOKEN_INT  shift, and go to state 43

    $default  reduce using rule 100 (data_type_specifier)


State 11

  112 visibility_qualifier: TOKEN_STATIC •

    $default  reduce using rule 112 (visibility_qualifier)


State 12

  113 visibility_qualifier: TOKEN_EXTERN •

    $default  reduce using rule 113 (visibility_qualifier)


State 13

  115 mod_qualifier: TOKEN_CONST •

    $default  reduce using rule 115 (mod_qualifier)


State 14

  116 mod_qualifier: TOKEN_VOLATILE •

    $default  reduce using rule 116 (mod_qualifier)


State 15

   43 struct_declaration: TOKEN_STRUCT • TOKEN_ID TOKEN_LEFT_BRACE struct_union_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI
  109 data_type_specifier: TOKEN_STRUCT • TOKEN_ID

    TOKEN_ID  shift, and go to state 44


State 16

   44 union_declaration: TOKEN_UNION • TOKEN_ID TOKEN_LEFT_BRACE struct_union_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI
  110 data_type_specifier: TOKEN_UNION • TOKEN_ID

    TOKEN_ID  shift, and go to state 45


State 17

   36 enum_declaration: TOKEN_ENUM • TOKEN_ID TOKEN_LEFT_BRACE enum_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI
  111 data_type_specifier: TOKEN_ENUM • TOKEN_ID

    TOKEN_ID  shift, and go to state 46


State 18

   22 define: TOKEN_PP_DEFINE •

    $default  reduce using rule 22 (define)


State 19

   23 undef: TOKEN_PP_UNDEF •

    $default  reduce using rule 23 (undef)


State 20

    9 global_statement: TOKEN_SEMI •

    $default  reduce using rule 9 (global_statement)


State 21

    0 $accept: program • $end
    1 program: program • TOKEN_EOF
    2        | program • global_statement

    $end             shift, and go to state 47
    TOKEN_INT        shift, and go to state 1
    TOKEN_CHAR       shift, and go to state 2
    TOKEN_FLOAT      shift, and go to state 3
    TOKEN_DOUBLE     shift, and go to state 4
    TOKEN_VOID       shift, and go to state 5
    TOKEN_INLINE     shift, and go to state 6
    TOKEN_SIGNED     shift, and go to state 7
    TOKEN_UNSIGNED   shift, and go to state 8
    TOKEN_LONG       shift, and go to state 9
    TOKEN_SHORT      shift, and go to state 10
    TOKEN_STATIC     shift, and go to state 11
    TOKEN_EXTERN     shift, and go to state 12
    TOKEN_CONST      shift, and go to state 13
    TOKEN_VOLATILE   shift, and go to state 14
    TOKEN_STRUCT     shift, and go to state 15
    TOKEN_UNION      shift, and go to state 16
    TOKEN_ENUM       shift, and go to state 17
    TOKEN_PP_DEFINE  shift, and go to state 18
    TOKEN_PP_UNDEF   shift, and go to state 19
    TOKEN_SEMI       shift, and go to state 20
    TOKEN_EOF        shift, and go to state 48

    global_statement      go to state 49
    def_undef_definition  go to state 23
    define                go to state 24
    undef                 go to state 25
    type_declaration      go to state 26
    enum_declaration      go to state 27
    struct_declaration    go to state 28
    union_declaration     go to state 29
    function_prototype    go to state 30
    function_definition   go to state 31
    function_signature    go to state 32
    all_type_specifiers   go to state 33
    type_pointer          go to state 34
    data_type_specifier   go to state 35
    visibility_qualifier  go to state 36
    mod_qualifier         go to state 37
    sign_qualifier        go to state 38
    var_declaration       go to state 39
    var_preamble          go to state 40


State 22

    3 program: global_statement •

    $default  reduce using rule 3 (program)


State 23

    8 global_statement: def_undef_definition •

    $default  reduce using rule 8 (global_statement)


State 24

   20 def_undef_definition: define •

    $default  reduce using rule 20 (def_undef_definition)


State 25

   21 def_undef_definition: undef •

    $default  reduce using rule 21 (def_undef_definition)


State 26

    4 global_statement: type_declaration •

    $default  reduce using rule 4 (global_statement)


State 27

   32 type_declaration: enum_declaration •

    $default  reduce using rule 32 (type_declaration)


State 28

   33 type_declaration: struct_declaration •

    $default  reduce using rule 33 (type_declaration)


State 29

   34 type_declaration: union_declaration •

    $default  reduce using rule 34 (type_declaration)


State 30

    6 global_statement: function_prototype •

    $default  reduce using rule 6 (global_statement)


State 31

    7 global_statement: function_definition •

    $default  reduce using rule 7 (global_statement)


State 32

   80 function_prototype: function_signature • TOKEN_SEMI
   81 function_definition: function_signature • compound_statement

    TOKEN_SEMI        shift, and go to state 50
    TOKEN_LEFT_BRACE  shift, and go to state 51

    compound_statement  go to state 52


State 33

  129 var_preamble: all_type_specifiers •

    $default  reduce using rule 129 (var_preamble)


State 34

   96 all_type_specifiers: type_pointer •
   98 type_pointer: type_pointer • TOKEN_ASTERISK

    TOKEN_ASTERISK  shift, and go to state 53

    $default  reduce using rule 96 (all_type_specifiers)


State 35

   95 all_type_specifiers: data_type_specifier •
   97 type_pointer: data_type_specifier • TOKEN_ASTERISK

    TOKEN_ASTERISK  shift, and go to state 54

    $default  reduce using rule 95 (all_type_specifiers)


State 36

  130 var_preamble: visibility_qualifier • all_type_specifiers
  133             | visibility_qualifier • mod_qualifier all_type_specifiers
  134             | visibility_qualifier • sign_qualifier all_type_specifiers
  136             | visibility_qualifier • mod_qualifier sign_qualifier all_type_specifiers

    TOKEN_INT       shift, and go to state 1
    TOKEN_CHAR      shift, and go to state 2
    TOKEN_FLOAT     shift, and go to state 3
    TOKEN_DOUBLE    shift, and go to state 4
    TOKEN_VOID      shift, and go to state 5
    TOKEN_SIGNED    shift, and go to state 7
    TOKEN_UNSIGNED  shift, and go to state 8
    TOKEN_LONG      shift, and go to state 9
    TOKEN_SHORT     shift, and go to state 10
    TOKEN_CONST     shift, and go to state 13
    TOKEN_VOLATILE  shift, and go to state 14
    TOKEN_STRUCT    shift, and go to state 55
    TOKEN_UNION     shift, and go to state 56
    TOKEN_ENUM      shift, and go to state 57

    all_type_specifiers  go to state 58
    type_pointer         go to state 34
    data_type_specifier  go to state 35
    mod_qualifier        go to state 59
    sign_qualifier       go to state 60


State 37

  131 var_preamble: mod_qualifier • all_type_specifiers
  135             | mod_qualifier • sign_qualifier all_type_specifiers

    TOKEN_INT       shift, and go to state 1
    TOKEN_CHAR      shift, and go to state 2
    TOKEN_FLOAT     shift, and go to state 3
    TOKEN_DOUBLE    shift, and go to state 4
    TOKEN_VOID      shift, and go to state 5
    TOKEN_SIGNED    shift, and go to state 7
    TOKEN_UNSIGNED  shift, and go to state 8
    TOKEN_LONG      shift, and go to state 9
    TOKEN_SHORT     shift, and go to state 10
    TOKEN_STRUCT    shift, and go to state 55
    TOKEN_UNION     shift, and go to state 56
    TOKEN_ENUM      shift, and go to state 57

    all_type_specifiers  go to state 61
    type_pointer         go to state 34
    data_type_specifier  go to state 35
    sign_qualifier       go to state 62


State 38

  132 var_preamble: sign_qualifier • all_type_specifiers

    TOKEN_INT     shift, and go to state 1
    TOKEN_CHAR    shift, and go to state 2
    TOKEN_FLOAT   shift, and go to state 3
    TOKEN_DOUBLE  shift, and go to state 4
    TOKEN_VOID    shift, and go to state 5
    TOKEN_LONG    shift, and go to state 9
    TOKEN_SHORT   shift, and go to state 10
    TOKEN_STRUCT  shift, and go to state 55
    TOKEN_UNION   shift, and go to state 56
    TOKEN_ENUM    shift, and go to state 57

    all_type_specifiers  go to state 63
    type_pointer         go to state 34
    data_type_specifier  go to state 35


State 39

    5 global_statement: var_declaration •

    $default  reduce using rule 5 (global_statement)


State 40

   82 function_signature: var_preamble • TOKEN_ID TOKEN_LEFT_PARENTHESES arg_list TOKEN_RIGHT_PARENTHESES
  119 var_declaration: var_preamble • id_list TOKEN_SEMI

    TOKEN_ID  shift, and go to state 64

    id_list  go to state 65


State 41

  103 data_type_specifier: TOKEN_LONG TOKEN_INT •

    $default  reduce using rule 103 (data_type_specifier)


State 42

  107 data_type_specifier: TOKEN_LONG TOKEN_DOUBLE •

    $default  reduce using rule 107 (data_type_specifier)


State 43

  104 data_type_specifier: TOKEN_SHORT TOKEN_INT •

    $default  reduce using rule 104 (data_type_specifier)


State 44

   43 struct_declaration: TOKEN_STRUCT TOKEN_ID • TOKEN_LEFT_BRACE struct_union_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI
  109 data_type_specifier: TOKEN_STRUCT TOKEN_ID •

    TOKEN_LEFT_BRACE  shift, and go to state 66

    $default  reduce using rule 109 (data_type_specifier)


State 45

   44 union_declaration: TOKEN_UNION TOKEN_ID • TOKEN_LEFT_BRACE struct_union_member_list TOKEN_RIGHT_BRACE TOKEN_SEMI
  110 data_type_specifier: TOKEN_UNION TOKEN_ID •

    TOKEN_LEFT_BRACE  shift, and go to state 67

    $default  reduce using rule 110 (data_type_specifier)


State 46
